<resources>
    <string name="app_name">Beber Água - Lembrete</string>
    <string name="hint_peso">Seu Peso (Kg)</string>
    <string name="hint_idade">Sua Idade</string>
    <string name="text_button_calcular">Calcular Ingestão Diária</string>
    <string name="text_buttom_lembrete">Lembrete</string>
    <string name="text_buttom_alarme">Alarme</string>
    <string name="text_hora">00</string>
    <string name="text_dois_pontos">:</string>
    <string name="text_minutos">00</string>
    <string name="toast_informe_peso">Informe o seu peso</string>
    <string name="toas_informe_idade">Informe sua idade</string>
    <string name="dialog_titulo">Redefinir Dados</string>
    <string name="dialog_desc">Deseja excluir todos os dados existentes?</string>3
    <string name="alarme_mensagem">Hora de beber água</string>


</resources>