<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">


    <View
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/container_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
         android:layout_width="100dp"
         android:layout_height="80dp"
         android:src="@drawable/bebaagua"
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
         app:layout_constraintTop_toTopOf="@id/container_header"
         app:layout_constraintStart_toStartOf="@id/container_header"
         />
     
      <ImageView
          android:id="@+id/ic_redefinir"
          android:layout_width="60dp"
          android:layout_height="40dp"
          android:src="@drawable/ic_refresh"
          android:layout_marginTop="30dp"
          android:layout_marginEnd="20dp"
          app:layout_constraintTop_toTopOf="@id/container_header"
          app:layout_constraintEnd_toEndOf="@id/container_header"
          />

    <EditText
        android:id="@+id/edit_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_peso"
        android:textColorHint="@android:color/holo_blue_dark"
        android:padding="15dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:gravity="center"
        android:layout_marginTop="121dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@+id/container_header"
        app:layout_constraintStart_toStartOf="parent"
        />


    <EditText
        android:id="@+id/edit_idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:hint="@string/hint_idade"
        android:inputType="number"
        android:maxLength="3"
        android:padding="15dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textColorHint="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toEndOf="@id/edit_peso"
        app:layout_constraintTop_toTopOf="@+id/container_header" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_degrade_button"
        android:padding="15dp"
        android:text="@string/text_button_calcular"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_peso" />


    <View
        android:id="@+id/container_resultado_ml"
        android:layout_width="308dp"
        android:layout_height="235dp"
        android:layout_margin="30dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/container_resultado_ml"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_calcular"
        app:layout_constraintVertical_bias="0.009" />

    <TextView
        android:id="@+id/txt_resultado_ml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/container_resultado_ml"
        app:layout_constraintEnd_toEndOf="@id/container_resultado_ml"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="@id/container_resultado_ml"
        app:layout_constraintTop_toTopOf="@id/container_resultado_ml"
        app:layout_constraintVertical_bias="0.482" />


    <Button
        android:id="@+id/bt_definir_lembrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="144dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/text_buttom_lembrete"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_alarme"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/text_buttom_alarme"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toEndtOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_resultado_ml" />

    <TextView
        android:id="@+id/txt_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_hora"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="150dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_definir_lembrete"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/txt_dois_pontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_dois_pontos"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_definir_lembrete"
        app:layout_constraintStart_toEndOf="@+id/txt_hora"/>

    <TextView
        android:id="@+id/txt_minutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_minutos"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_definir_lembrete"
        app:layout_constraintStart_toEndOf="@+id/txt_dois_pontos"/>